--- a/index.html
+++ b/index.html
@@ -163,32 +163,31 @@
               </ul>
               <h2 class="section-title">Authors</h2>
               <ul class="list authors">
-                <li>
-                  <a href="#">
-                    <span class="author-name"></span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="author-name"></span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="author-name"></span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="author-name"></span>
-                  </a>
-                </li>
               </ul>
             </aside>
           </main>
         </div>
       </div>
-
+  <script id="template-article-link" type="text/x-handlebars-template">
+    <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  </script>
+  <script id="template-tag-link" type="text/x-handlebars-template">
+    <li><a href="#tag-{{ id }}">{{ tag }}</a></li>
+  </script>
+  <script id="template-author-link" type="text/x-handlebars-template">
+    <a href ="#author-{{ author }}">{{ author }}</a>
+  </script>
+  <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+    <li><a href="#tag-{{tag}}" class="{{className}}">{{tag}} ({{count}})</a></li>
+    {{/each}}
+  </script>
+  <script id="template-author-cloud-link" type="text/x-handlebars-template"></script>
+    {{#each tags}}    
+    <li><a href="#author-{{author}}"><span>{{author}} ({{count}})</span></a></li>
+    {{/each}}
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
